--- a/app/src/main/res/layout/activity_msscota_favoritos.xml
+++ b/app/src/main/res/layout/activity_msscota_favoritos.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_msscota_favoritos"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="padilla.david.petagram.MainActivity">
+    tools:context="padilla.david.petagram.MsscotaFavoritos">
 
-    <include android:id="@+id/miActionBar"
-        layout="@layout/actionbar">
-    </include>
+    <include android:id="@id/miActionBar"
+        layout="@layout/actionbar"></include>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvMascotas"
+        android:id="@+id/rvMascotasFav"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:padding="@dimen/activity_vertical_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_below="@id/miActionBar"/>
+
 </RelativeLayout>
