--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="appbarElevation">4dp</dimen>
+    <dimen name="card_radius">4dp</dimen>
+    <dimen name="photo_height">250dp</dimen>
+    <dimen name="photo_width">250dp</dimen>
+    <dimen name="cv_padding">8dp</dimen>
+    <dimen name="bone_icon">45dp</dimen>
+    <dimen name="name_size">20dp</dimen>
+    <dimen name="margin_cv">10dp</dimen>
 </resources>
